.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Distribution_Member__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Contact_Email__c</fullName>
        <formula>Incap311__Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Distribution Members</relationshipLabel>
        <relationshipName>Distribution_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Distribution Member</label>
    <listViews>
        <fullName>Incap311__All</fullName>
        <columns>NAME</columns>
        <columns>Incap311__Contact__c</columns>
        <columns>Incap311__Contact_Email__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SDM-{00000000}</displayFormat>
        <label>Distribution Member Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribution Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>